fix dropdown list on firefox

--- a/vubin/kuyam/content/style.css
+++ b/vubin/kuyam/content/style.css
@@ -9209,9 +9209,9 @@ td ul {
 	.icon-mobile-dropdown {
 		background: url(images/icons_2016/icon_mobile_dropdown.jpg) no-repeat;
 		width: 20px;
-		height: 20px;
+		height: 30px;
 		position: absolute;
-		top: 20px;
+		top: 15px;
 		right: 5px;
 		pointer-events: none;
 		z-index: 1;
